пока косячное представление judge.chtml, необходимо доработать , смену внешнего видо в зависимости от типа выбранного мероприятия
TestManager/Controller/Ctrl теперь отвечают за выставление оценок
exhebition.chtml пока тестовое представление

--- a/Doggies/Doggies.csproj
+++ b/Doggies/Doggies.csproj
@@ -317,6 +317,7 @@
     <Content Include="Views\Home\SPA\App\user.cshtml" />
     <Content Include="Views\Home\SPA\App\judge.cshtml" />
     <Content Include="Views\Home\SPA\User\UserProfile.cshtml" />
+    <Content Include="Views\Home\SPA\App\exhebition.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
