--- a/Doggies/Doggies.csproj
+++ b/Doggies/Doggies.csproj
@@ -260,6 +260,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Scripts\Controllers\OrganizationCtrl.js" />
+    <Content Include="Scripts\Services\DogService.js" />
     <Content Include="Scripts\Services\ProfileService.js" />
     <Content Include="Views\Shared\myStyles.css" />
     <Content Include="External\angular-aria.js" />
