--- a/Doggies/Doggies.csproj
+++ b/Doggies/Doggies.csproj
@@ -227,6 +227,7 @@
     <Compile Include="Controllers\Api\myUserController.cs" />
     <Compile Include="Controllers\Api\JudgeController.cs" />
     <Compile Include="Controllers\Api\OrganizationController.cs" />
+    <Compile Include="Controllers\Api\RequestController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -249,6 +250,7 @@
     <Compile Include="Models\Field\JudgeManager.cs" />
     <Compile Include="Models\Field\myUser.cs" />
     <Compile Include="Models\Field\myUserManager.cs" />
+    <Compile Include="Models\Field\RequestManager.cs" />
     <Compile Include="Models\Field\WholeInfoForUser.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Manager.cs" />
@@ -260,7 +262,9 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Scripts\Controllers\OrganizationCtrl.js" />
+    <Content Include="Scripts\Controllers\RequestCtrl.js" />
     <Content Include="Scripts\Services\ProfileService.js" />
+    <Content Include="Scripts\Services\RequestForEventService.js" />
     <Content Include="Views\Shared\myStyles.css" />
     <Content Include="External\angular-aria.js" />
     <Content Include="External\angular-locale_ru-ru.js" />
@@ -326,6 +330,7 @@
     <Content Include="Views\Home\SPA\User\UserProfile.cshtml" />
     <Content Include="Views\Shared\CommonView.cshtml" />
     <Content Include="Views\Home\SPA\App\organization.cshtml" />
+    <Content Include="Views\Home\SPA\App\request.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
